argocd/manifests/ittools/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittools
  namespace: ittools
  labels:
    app: ittools
    app.kubernetes.io/name: ittools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ittools
  template:
    metadata:
      labels:
        app: ittools
        app.kubernetes.io/name: ittools
    spec:
      containers:
        - name: ittools
          image: corentinth/it-tools:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
