argocd/manifests/ittools/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ittools
  namespace: ittools
  labels:
    app: ittools
    app.kubernetes.io/name: ittools
spec:
  type: ClusterIP
  selector:
    app: ittools
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
